# lab3-km

./: CMakeLists.txt  Lab3_KMean.ipynb  README.md
plot/: plot_cluster.py
src/: main.cpp
src/krazy/: KrazyMeans.cpp  KrazyMeans.hpp
src/utils/: DataSet.cpp  DataSet.hpp  FeatureVec.cpp  FeatureVec.hpp  RandomGenerator.hpp
